# NNCA

./: Cargo.toml  README.md  example_run.sh  example_run_stratified.sh
results/: analysis_report.txt  complete_results.json  covariate_correlations.csv  example_dataset.csv  individual_results.csv  method_comparison.csv  population_summary.csv  regression_analysis.csv  summary_statistics.csv
src/: auc.rs  covariate.rs  errors.rs  example_data.rs  lib.rs  main.rs  models.rs  nca.rs  output.rs  parameters.rs  parser.rs  population.rs  stratification.rs
tests/: integration_tests.rs
